--- a/appZapp/app/styles/app.scss
+++ b/appZapp/app/styles/app.scss
@@ -52,8 +52,8 @@
     //@import "components/zetka/zetka--settings";
     //@import "components/zetka/zetka--constructor";
     //@import "components/zetka/zetka--layout";
-    @import "components/article-grid/sass-formula";
-    @import "components/article-grid/sass-zetka-fallback";
+    //@import "components/article-grid/sass-formula";
+    //@import "components/article-grid/sass-zetka-fallback";
 
 
 /* EOF sass ordnung */
