--- a/appZapp/app/styles/components/html-core/html-wrap.scss
+++ b/appZapp/app/styles/components/html-core/html-wrap.scss
@@ -78,6 +78,7 @@ hr {
     border: 0;
     background: transparent;
     box-shadow: none;
+    margin: 0;
 
     /* use as visual spacer */
     display:    block;
